fixed h2 color contrast

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ h1 {
 
 h2 {
   font-family: 'Open Sans Condensed';
-  color: #A53860;
+  color: #000;
   padding-top: 4%;
   padding-left: 4%;
   padding-right: 4%;
